==> salvato/Intercom/Src/RF24.cpp <==
#include "main.h"
#include "config.h"
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.h"

bool
rf24Init(uint8_t channelNumber, uint32_t preempPriority) {
    payload_size             = MAX_PAYLOAD_SIZE;
    dynamic_payloads_enabled = false;
    addr_width               = 5;
    csDelay                  = 130;
    pipe0_reading_address[0] = 0;
    uint8_t setup            = 0;
    bBusy                    = false;

    // Initialize pins
    InitPins(preempPriority);
    // Initialize SPI interface
    spiInit(SPI_MODE_MASTER);

    rf24PowerDown();
    ce(GPIO_PIN_RESET);
    csn(GPIO_PIN_SET);
    HAL_Delay(100); // To allow for nRF24L01+ powerup

    toggle_features();// Needed: See p46 of datasheet rev 2.0
    write_register(EN_AA, 0);
    write_register(DYNPD, 0);

    // Configure nRF24L01+ module
    setup  = _BV(CRCO)        | // 2 Bytes CRC
             _BV(EN_CRC)      | // CRC Enabled
             _BV(MASK_MAX_RT) | // No MAX_RT (Max Retry Reached) IRQ
             _BV(MASK_TX_DS)  | // No TX_DS (Data Sent)          IRQ
             _BV(MASK_RX_DR);   // No RX_DR (Data Ready)         IRQ
    setup &= ~_BV(PRIM_RX);     // PTX
    setup &= ~_BV(PWR_UP);      // POWER DOWN
    write_register(NRF_CONFIG, &setup, 1);
    if(read_register(NRF_CONFIG) != setup)
        return false;

    // In order to enable DPL the EN_DPL bit in the FEATURE register must be set.
    // In RX mode the DYNPD register has to be set.
    // A PTX that transmits to a PRX with DPL enabled must have the
    // DPL_P0 bit in DYNPD set
    // In order to enable Auto Acknowledgement with payload the EN_ACK_PAY bit
    // in the FEATURE register must be set.
    setup = _BV(EN_DPL)     | // Enables Dynamic Payload Length
            _BV(EN_ACK_PAY) | // Enables Payload with ACK
            _BV(EN_DYN_ACK);  // Enables the W_TX_PAYLOAD_NOACK command
    write_register(FEATURE, setup);
    if(read_register(FEATURE) != setup)
        return false;

    // Enable Enhanced ShockBurst Auto Acknowledgment on all pipes.
    setup = _BV(ENAA_P0) |
            _BV(ENAA_P1) |
            _BV(ENAA_P2) |
            _BV(ENAA_P3) |
            _BV(ENAA_P4) |
            _BV(ENAA_P5);
    write_register(EN_AA,  setup);
    if(read_register(EN_AA) != setup)
        Error_Handler();

    // Enable Dynamic Payload Length on all pipes
    setup = _BV(DPL_P0) |
            _BV(DPL_P1) |
            _BV(DPL_P2) |
            _BV(DPL_P3) |
            _BV(DPL_P4) |
            _BV(DPL_P5);
    write_register(DYNPD, setup);
    if(read_register(DYNPD) != setup)
        return false;
    dynamic_payloads_enabled = true;

    rf24SetRetries(1, 0); // 500 us and Single Retry

    // Reset value is MAX
    rf24SetPALevel(RF24_PA_MAX);

    // Get the RF setup to be sure the module is attached and responding
    setup = read_register(RF_SETUP);
    // if setup is 0 or 0xff then there was no response from module
    if(setup == 0 || setup == 0xff)
        return false;

    // Set the on Air Data Rate
    rf24SetDataRate(RF24_2MBPS);

    rf24SetChannel(channelNumber);

    // Flush FIFO buffers
    rf24Flush_rx();
    rf24Flush_tx();

    // Power up by default when begin() is called
    rf24PowerUp();

    // Clear Interrupt Request...
    rf24ClearInterrupts();
    // Enable hardware interrupts
    rf24EnableIRQ();

    return true;
}

void
ce(GPIO_PinState level) {
    HAL_GPIO_WritePin(NRF24_CE_PORT, NRF24_CE_PIN,level);
}

uint8_t
write_payload(const void* buf, uint8_t data_len, const uint8_t writeType) {
    uint8_t status;
    const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);
    data_len = rf24_min(data_len, payload_size);
    uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

    IF_SERIAL_DEBUG( printf("[Writing %u bytes %u blanks]\n",data_len,blank_len); );

    beginTransaction(); // csn(GPIO_PIN_RESET)
    status = spiTransfer(writeType);
    while(data_len--) {
        spiTransfer(*current++);
    }
    while(blank_len--) {
        spiTransfer(0);
    }
    endTransaction(); // csn(GPIO_PIN_SET)
    return status;
}

uint8_t
read_payload(void* buf, uint8_t data_len) {
    uint8_t status;
    uint8_t* current = reinterpret_cast<uint8_t*>(buf);
    if(data_len > payload_size) data_len = payload_size;
    uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

    IF_SERIAL_DEBUG( printf("[Reading %u bytes %u blanks]\n",data_len,blank_len); );
    beginTransaction();
    status = spiTransfer(R_RX_PAYLOAD);
    spiTransfer(current, data_len);
    if(blank_len)
        spiTransfer(current+data_len, blank_len);
    endTransaction();
    return status;
}

uint8_t
rf24Flush_rx(void) {
    return spiTrans(FLUSH_RX);
}

uint8_t
rf24Flush_tx(void) {
    return spiTrans(FLUSH_TX);
}

void
rf24SetChannel(uint8_t channel) {
    const uint8_t max_channel = 125;
    write_register(RF_CH,rf24_min(channel,max_channel));
}

void
rf24StartListening(void) {
    rf24PowerUp();
    write_register(NRF_CONFIG, read_register(NRF_CONFIG) | _BV(PRIM_RX));
    write_register(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );
    ce(GPIO_PIN_SET);
    // Restore the pipe0 adddress, if exists
    if (pipe0_reading_address[0] > 0) {
        write_register(RX_ADDR_P0, pipe0_reading_address, addr_width);
    }
    else {
        rf24CloseReadingPipe(0);
    }
    // Flush buffers
    //flush_rx();
    if(read_register(FEATURE) & _BV(EN_ACK_PAY)) {
        rf24Flush_tx();
    }
    // Go!
    //delayMicroseconds(100);
}

void
rf24StopListening(void) {
    ce(GPIO_PIN_RESET);
    delayMicroseconds(txDelay);//140
    if(read_register(FEATURE) & _BV(EN_ACK_PAY)) {
        delayMicroseconds(txDelay); //140
        rf24Flush_tx();
    }
    write_register(NRF_CONFIG, (read_register(NRF_CONFIG)) & ~_BV(PRIM_RX) );
    write_register(EN_RXADDR, read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[0]))); // Enable RX on pipe0
}

void
rf24PowerDown(void) {
    ce(GPIO_PIN_RESET); // Guarantee CE is low on powerDown
    write_register(NRF_CONFIG, read_register(NRF_CONFIG) & ~_BV(PWR_UP));
}

void
rf24PowerUp(void) {
    uint8_t cfg = read_register(NRF_CONFIG);
    // if not powered up then power up and wait for the radio to initialize
    if (!(cfg & _BV(PWR_UP))){
        write_register(NRF_CONFIG, cfg | _BV(PWR_UP));
        // For nRF24L01+ to go from power down mode to TX or RX mode it must first pass through stand-by mode.
        // There must be a delay of Tpd2stby (see Table 16.) after the nRF24L01+ leaves power down mode before
        // the CE is set high. - Tpd2stby can be up to 5ms per the 1.0 datasheet
        HAL_Delay(5);
    }
}

bool
rf24Write( const void* buf, uint8_t len, const bool multicast ) {
    //Start Writing
    rf24StartFastWrite(buf, len, multicast);
    //Wait until complete or failed
    uint32_t timer = HAL_GetTick();
    while(!(get_status()  & (_BV(TX_DS) | _BV(MAX_RT)))) {
        if(HAL_GetTick() - timer > 95){
            errNotify();
            return 0;
        }
    }
    ce(GPIO_PIN_RESET);
    uint8_t status = write_register(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );
    //Max retries exceeded
    if(status & _BV(MAX_RT)){
        rf24Flush_tx(); //Only going to be 1 packet into the FIFO at a time using this method, so just flush
        return 0;
    }
    //TX OK 1 or 0
    return 1;
}

bool
rf24Write(const void* buf, uint8_t len) {
    return rf24Write(buf, len, 0);
}

void
rf24StartFastWrite(const void* buf, uint8_t len, const bool multicast, bool startTx) { //TMRh20
    write_payload(buf, len, multicast ? W_TX_PAYLOAD_NO_ACK : W_TX_PAYLOAD);
    if(startTx) {
        ce(GPIO_PIN_SET);
	}
}

uint8_t
rf24GetDynamicPayloadSize(void) {
    uint8_t result = 0;
    beginTransaction();
    spiTransfer( R_RX_PL_WID );
    result = spiTransfer(0xff);
    endTransaction();
    if(result > 32) {
        rf24Flush_rx();
        HAL_Delay(2);
        return 0;
    }
    return result;
}

void
rf24OpenWritingPipe(const uint8_t *address) {
    // Note that NRF24L01(+) expects address LSB first
    write_register(RX_ADDR_P0, address, addr_width);
    write_register(TX_ADDR, address, addr_width);
    write_register(RX_PW_P0, payload_size);
}

void
rf24OpenReadingPipe(uint8_t child, const uint8_t *address) {
    // If this is pipe 0, cache the address.  This is needed because
    // openWritingPipe() will overwrite the pipe 0 address, so
    // startListening() will have to restore it.
    if (child == 0) {
        memcpy(pipe0_reading_address, address,addr_width);
    }
    if (child <= 6) {
        // For pipes 2-5, only write the LSB
        if (child < 2) {
            write_register(pgm_read_byte(&child_pipe[child]), address, addr_width);
        }
        else {
            write_register(pgm_read_byte(&child_pipe[child]), address, 1);
        }
        write_register(pgm_read_byte(&child_payload_size[child]), payload_size);
        // Note it would be more efficient to set all of the bits for all open
        // pipes at once.  However, I thought it would make the calling code
        // more simple to do it this way.
        write_register(EN_RXADDR, read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[child])));
    }
}

void
rf24CloseReadingPipe( uint8_t pipe ) {
    write_register(EN_RXADDR,read_register(EN_RXADDR) & ~_BV(pgm_read_byte(&child_pipe_enable[pipe])));
}

void
toggle_features(void) {
    beginTransaction();
    spiTransfer(ACTIVATE);
    spiTransfer(0x73);
	endTransaction();
}

void
rf24EnableDynamicPayloads(void) {
    // Enable dynamic payload throughout the system
    //toggle_features();
    write_register(FEATURE, read_register(FEATURE) | _BV(EN_DPL) );
    IF_SERIAL_DEBUG(printf("FEATURE=%i\r\n",read_register(FEATURE)));
    // Enable dynamic payload on all pipes
    //
    // Not sure the use case of only having dynamic payload on certain
    // pipes, so the library does not support it.
    write_register(DYNPD,read_register(DYNPD) | _BV(DPL_P5) | _BV(DPL_P4) | _BV(DPL_P3) | _BV(DPL_P2) | _BV(DPL_P1) | _BV(DPL_P0));
    dynamic_payloads_enabled = true;
}

void
rf24DisableDynamicPayloads(void) {
    // Disables dynamic payload throughout the system.  Also disables Ack Payloads
    //toggle_features();
    write_register(FEATURE, 0);
    IF_SERIAL_DEBUG(printf("FEATURE=%i\r\n",read_register(FEATURE)));
    // Disable dynamic payload on all pipes
    //
    // Not sure the use case of only having dynamic payload on certain
    // pipes, so the library does not support it.
    write_register(DYNPD, 0);
    dynamic_payloads_enabled = false;
}

void
rf24SetPALevel(uint8_t level) {
    uint8_t setup = read_register(RF_SETUP) & 0xF8;
    if(level > 3) {  						// If invalid level, go to max PA
        level = (RF24_PA_MAX << 1) + 1;		// +1 to support the SI24R1 chip extra bit
    }
    else {
        level = (level << 1) + 1;	 		// Else set level as requested
    }
    setup |= level;
    write_register(RF_SETUP, setup) ;	// Write it to the chip
}

bool
rf24SetDataRate(rf24_datarate_e speed) {
    bool result = false;
    uint8_t setup = read_register(RF_SETUP) ;
    // HIGH and LOW '00' is 1Mbs - our default
    setup &= ~(_BV(RF_DR_LOW) | _BV(RF_DR_HIGH)) ;
    txDelay=250;
    if(speed == RF24_250KBPS) {
        // Must set the RF_DR_LOW to 1; RF_DR_HIGH (used to be RF_DR) is already 0
        // Making it '10'.
        setup |= _BV( RF_DR_LOW );
        txDelay=450;
    }
    else {
        // Set 2Mbs, RF_DR (RF_DR_HIGH) is set 1
        // Making it '01'
        if(speed == RF24_2MBPS) {
            setup |= _BV(RF_DR_HIGH);
            txDelay=140;
        }
    }
    write_register(RF_SETUP, setup);
    // Verify our result
    if(read_register(RF_SETUP) == setup) {
        result = true;
    }
    return result;
}

void
rf24SetRetries(uint8_t delay, uint8_t count) {
    write_register(SETUP_RETR, (delay&0xf)<<ARD | (count&0xf)<<ARC);
}
