==> mattwach/avr_pico/lib/rf24/rf24.c <==
#include "nRF24L01.h"
#include "rf24.h"
#include <avr/pgmspace.h>
#include <misc/pin.h>
#include <spi/spi.h>
#include <string.h>
#include <util/delay.h>
#define LOW 0
#define HIGH 1
#define rf24_min(X,Y) ((X)<(Y) ? (X) : (Y))
#define rf24_max(X,Y) ((X)>(Y) ? (X) : (Y))

void ce(const RF24* rf24, bool_t level) {
  //Allow for 3-pin use on ATTiny
  if (rf24->ce_pin == rf24->csn_pin) {
    return;
  }
  
  if (level) {
    set_pin(rf24->ce_pin);
  } else {
    clr_pin(rf24->ce_pin);
  }
}

void toggle_features(const RF24* rf24) {
  begin_spi(rf24);
  spi_syncWrite(ACTIVATE);
  spi_syncWrite(0x73);
  end_spi(rf24);
}

uint8_t write_payload(
	const RF24* rf24,
	const void* buf,
	uint8_t data_len,
	const uint8_t writeType) {
  const uint8_t* current = (const uint8_t*)buf;
  data_len = rf24_min(data_len, rf24->payload_size);
  uint8_t blank_len = rf24->dynamic_payloads_enabled ?
      0 : rf24->payload_size - data_len;

  begin_spi(rf24);
  uint8_t status = spi_syncTransact( writeType );
  while (data_len--) {
    spi_syncWrite(*current++);
  }

  while (blank_len--) {
    spi_syncWrite(0);
  }  

  end_spi(rf24);
  return status;
}

uint8_t read_payload(const RF24* rf24, void* buf, uint8_t data_len) {
  uint8_t status;
  uint8_t* current = (uint8_t*)buf;

  if (data_len > rf24->payload_size) {
    data_len = rf24->payload_size;
  }

  uint8_t blank_len =
      rf24->dynamic_payloads_enabled ?
          0 : rf24->payload_size - data_len;
  
  begin_spi(rf24);
  status = spi_syncTransact( R_RX_PAYLOAD );
  while ( data_len-- ) {
    *current++ = spi_syncTransact(0xFF);
  }

  while ( blank_len-- ) {
    spi_syncWrite(0xff);
  }

  end_spi(rf24);
  return status;
}

uint8_t rf24_flush_rx(const RF24* rf24) {
  return send_spi_cmd(rf24 , FLUSH_RX);
}

uint8_t rf24_flush_tx(const RF24* rf24) {
  return send_spi_cmd(rf24 , FLUSH_TX);
}

void rf24_init(RF24* rf24, uint16_t _cepin, uint16_t _cspin) {
  rf24->ce_pin = _cepin;
  rf24->csn_pin = _cspin;
  rf24->p_variant = FALSE;
  rf24->payload_size = 32;
  rf24->dynamic_payloads_enabled = FALSE;
  rf24->addr_width = 5;
  rf24->pipe0_reading_address[0]=0;
}

void rf24_set_channel(const RF24* rf24, uint8_t channel) {
  const uint8_t max_channel = 125;
  write_reg(rf24, RF_CH, rf24_min(channel,max_channel));
}

void rf24_start_listening(const RF24* rf24) {
#if !defined (RF24_TINY) && ! defined(LITTLEWIRE)
  // mattwach: Commented this out.  Is it really needed?
  //rf24_power_up(rf24);
#endif
  write_reg(rf24, NRF_CONFIG, read_reg(rf24, NRF_CONFIG) | _BV(PRIM_RX));
  write_reg(rf24, NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );
  ce(rf24, HIGH);
  // Restore the pipe0 adddress, if exists
  if (rf24->pipe0_reading_address[0] > 0) {
    write_reg_buf(rf24, RX_ADDR_P0, rf24->pipe0_reading_address, rf24->addr_width);	
  } else {
    rf24_close_reading_pipe(rf24, 0);
  }

  // Flush buffers
  // mattwach: confirmed commented-out
  //rf24_flush_rx(rf24);
  if (read_reg(rf24, FEATURE) & _BV(EN_ACK_PAY)) {
    rf24_flush_tx(rf24);
  }

  // Go!
  // mattwach: confirmed commented-out
  //_delay_us(100);
}

void rf24_stop_listening(const RF24* rf24) {  
  ce(rf24, LOW);
  delay_us(rf24->txDelay);
  if (read_reg(rf24, FEATURE) & _BV(EN_ACK_PAY)) {
    delay_us(rf24->txDelay); //200
    rf24_flush_tx(rf24);
  }

  write_reg(rf24, NRF_CONFIG, ( read_reg(rf24, NRF_CONFIG) ) & ~_BV(PRIM_RX) );

/*
#if defined (RF24_TINY) || defined (LITTLEWIRE)
  // for 3 pins solution TX mode is only left with additonal powerDown/powerUp
  // cycle
  if (rf24->ce_pin == rf24->csn_pin) {
    rf24_power_down(rf24);
    rf24_power_up(rf24);
  }
#endif
*/

 // Enable RX on pipe0
  write_reg(
	  rf24,
	  EN_RXADDR,
	  read_reg(rf24, EN_RXADDR) |
	                 _BV(pgm_read_byte(&child_pipe_enable[0])));
}

void rf24_power_down(const RF24* rf24) {
  ce(rf24, LOW); // Guarantee CE is low on powerDown
  write_reg(rf24, NRF_CONFIG,read_reg(rf24, NRF_CONFIG) & ~_BV(PWR_UP));
}

void rf24_power_up(const RF24* rf24) {
  uint8_t cfg = read_reg(rf24, NRF_CONFIG);

  // if not powered up then power up and wait for the radio to initialize
  if (!(cfg & _BV(PWR_UP))) {
    write_reg(rf24, NRF_CONFIG, cfg | _BV(PWR_UP));

	// For nRF24L01+ to go from power down mode to TX or RX mode it must first
	// pass through stand-by mode.  There must be a delay of Tpd2stby (see
	// Table 16.) after the nRF24L01+ leaves power down mode before the CEis
	// set high. - Tpd2stby can be up to 5ms per the 1.0 datasheet
    _delay_us(5);
  }
}

bool_t rf24_write(
	const RF24* rf24 , const void* buf, uint8_t len, const bool_t multicast) {
  rf24_start_fast_write(rf24, buf,len,multicast, TRUE);

  //Wait until complete or failed
#if defined (FAILURE_HANDLING)
  uint32_t timer = rf24_millis(rf24);
#endif
  while (!(get_status(rf24) & (_BV(TX_DS) | _BV(MAX_RT)))) { 
#if defined (FAILURE_HANDLING)
	if (rf24_millis(rf24) - timer > 95) {			
	  rf24_err_notify(rf24);
  #if defined (FAILURE_HANDLING)
	  return 0;		
  #else
	  _delay_us(100);
  #endif
	}
#endif
  }

  ce(rf24, LOW);
  write_reg(rf24, NRF_STATUS,_BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));
  return 1;  // TX OK
}

void rf24_start_fast_write(
	const RF24* rf24,
	const void* buf,
	uint8_t len,
	const bool_t multicast,
	bool_t startTx) { //TMRh20
  write_payload(
	  rf24,
	  buf,
	  len,
	  multicast ? W_TX_PAYLOAD_NO_ACK : W_TX_PAYLOAD);

  if(startTx){
	ce(rf24, HIGH);
  }
}

uint8_t rf24_get_dynamic_payload_size(const RF24* rf24) {
  uint8_t result = 0;
  begin_spi(rf24);
  spi_syncWrite(R_RX_PL_WID);
  result = spi_syncTransact(0xff);
  end_spi(rf24);
  if (result > 32) {
    rf24_flush_rx(rf24);
    _delay_us(2);
    return 0;
  }

  return result;
}

void rf24_open_writing_pipe(const RF24* rf24, const uint8_t *address) {
  // Note that AVR 8-bit uC's store this LSB first, and the
  // rf24__n_r_f24_l01(rf24, +) expects it LSB first too, so we're good.
  write_reg_buf(rf24, RX_ADDR_P0,address, rf24->addr_width);
  write_reg_buf(rf24, TX_ADDR, address, rf24->addr_width);
  write_reg(rf24, RX_PW_P0,rf24->payload_size);
}

void rf24_open_reading_pipe(
    RF24* rf24, uint8_t child, const uint8_t *address) {
  // If this is pipe 0, cache the address.  This is needed because
  // rf24_open_writing_pipe(rf24) will overwrite the pipe 0 address, so
  // rf24_start_listening(rf24) will have to restore it.
  if (child == 0) {
    memcpy(rf24->pipe0_reading_address,address,rf24->addr_width);
  }

  if (child <= 6) {
    // For pipes 2-5, only write the LSB
    if (child < 2) {
      write_reg_buf(
          rf24, pgm_read_byte(&child_pipe[child]), address, rf24->addr_width);
    } else {
      write_reg_buf(rf24, pgm_read_byte(&child_pipe[child]), address, 1);
	   }

    write_reg(
        rf24,
        pgm_read_byte(&child_rf24_payload_size[child]),
        rf24->payload_size);

    // Note it would be more efficient to set all of the bits for all open
    // pipes at once.  However, I thought it would make the calling code
    // more simple to do it this way.
    write_reg(
        rf24,
        EN_RXADDR,
        read_reg(rf24, EN_RXADDR) | _BV(
          pgm_read_byte(&child_pipe_enable[child])));
  }
}

void rf24_close_reading_pipe(const RF24* rf24 , uint8_t pipe ) {
  write_reg(
      rf24,
      EN_RXADDR,
      read_reg(rf24, EN_RXADDR) & ~_BV(pgm_read_byte(&child_pipe_enable[pipe]))
  );
}

void rf24_enable_dynamic_payloads(RF24* rf24) {
  // Enable dynamic payload throughout the system
  write_reg(rf24, FEATURE,read_reg(rf24, FEATURE) | _BV(EN_DPL));

  // Enable dynamic payload on all pipes
  //
  // Not sure the use case of only having dynamic payload on certain
  // pipes, so the library does not support it.
  write_reg(
	  rf24,
	  DYNPD,
	  read_reg(rf24, DYNPD) | _BV(DPL_P5) | _BV(DPL_P4) | _BV(DPL_P3) |
	                          _BV(DPL_P2) | _BV(DPL_P1) | _BV(DPL_P0));

  rf24->dynamic_payloads_enabled = TRUE;
}

void rf24_disable_dynamic_payloads(RF24* rf24) {
  // Disables dynamic payload throughout the system.  Also disables Ack Payloads
  write_reg(rf24, FEATURE, 0);

  // Disable dynamic payload on all pipes
  //
  // Not sure the use case of only having dynamic payload on certain
  // pipes, so the library does not support it.
  write_reg(rf24, DYNPD, 0);
  rf24->dynamic_payloads_enabled = FALSE;
}

void rf24_set_pa_level(const RF24* rf24, uint8_t level) {
  uint8_t setup = read_reg(rf24, RF_SETUP) & 0xF8;
  if (level > 3) {  // If invalid level, go to max PA
	  level = (RF24_PA_MAX << 1) + 1;  //+1 to support the SI24R1 chip extra bit
  } else {
	  level = (level << 1) + 1;
  }

  write_reg(rf24 , RF_SETUP, setup |= level);
}

bool_t rf24_set_data_rate(RF24* rf24, rf24_datarate_e speed) {
  bool_t result = FALSE;
  uint8_t setup = read_reg(rf24, RF_SETUP);

  // HIGH and LOW '00' is 1Mbs - our default
  setup &= ~(_BV(RF_DR_LOW) | _BV(RF_DR_HIGH)) ;

  rf24->txDelay=85;
  if (speed == RF24_250KBPS) {
    // Must set the RF_DR_LOW to 1; RF_DR_HIGH (used to be RF_DR) is already 0
    // Making it '10'.
    setup |= _BV( RF_DR_LOW ) ;
    rf24->txDelay=155;
  } else {
    // Set 2Mbs, RF_DR (RF_DR_HIGH) is set 1
    // Making it '01'
    if (speed == RF24_2MBPS) {
      setup |= _BV(RF_DR_HIGH);
      rf24->txDelay=65;
    }
  }

  write_reg(rf24, RF_SETUP,setup);
  if (read_reg(rf24, RF_SETUP) == setup) {
    result = TRUE;
  }

  return result;
}

void rf24_set_retries(const RF24* rf24, uint8_t delay, uint8_t count) {
  write_reg(rf24, SETUP_RETR,(delay&0xf)<<ARD | (count&0xf)<<ARC);
}
